# CMake_CPP_to_RUST_examples

./: README.md
external_lang/cpp_third_party_libraries/: CMakeLists.txt
external_lang/cpp_third_party_libraries/include/: Third.hpp
external_lang/cpp_third_party_libraries/src/: main.cpp
external_lang/rust_third_party_libraries/: Cargo.toml
external_lang/rust_third_party_libraries/src/: lib.rs
project_cpp/: CMakeLists.txt  example_ptr.cpp  tree.txt
project_cpp/include/: external_cpp_library_fake_lib.hpp  external_rust_library.hpp  header.h  test_lib.h
project_cpp/lib/my_static_lib/: _CMakeLists.txt  mul.cpp  mul.h
project_cpp/others/: foo.cpp  foo.hpp
project_cpp/src/: main.cpp
